--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -108,39 +108,84 @@
                     android:layout_height="1dp"
                     android:background="#EEEEEE"/>
 
-                <TextView
+                <LinearLayout
                     android:id="@+id/menuSettings"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:gravity="center_vertical"
-                    android:text="⚙️  내 정보"
-                    android:paddingStart="10dp"/>
+                    android:orientation="horizontal"
+                    android:paddingStart="15dp">
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/ic_settings"
+                    app:tint="#666666" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:gravity="center_vertical"
+                        android:text="내 정보"
+                        android:paddingStart="10dp"/>
+
+                </LinearLayout>
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:background="#EEEEEE"/>
 
-                <TextView
+                <LinearLayout
                     android:id="@+id/menuLanguage"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:gravity="center_vertical"
-                    android:text="🌐  언어"
+                    android:orientation="horizontal"
+                    android:paddingStart="15dp">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/ic_globe"
+                        app:tint="#666666" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:gravity="center_vertical"
+                    android:text="언어"
                     android:paddingStart="10dp"/>
+
+                </LinearLayout>
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:background="#EEEEEE"/>
 
-                <TextView
+                <LinearLayout
                     android:id="@+id/menuSupport"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:gravity="center_vertical"
-                    android:text="🎧  고객센터"
+                    android:orientation="horizontal"
+                    android:paddingStart="15dp">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/ic_headphones"
+                        app:tint="#666666" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:gravity="center_vertical"
+                    android:text="고객센터"
                     android:paddingStart="10dp"/>
+
+                </LinearLayout>
 
                 <View
                     android:layout_width="match_parent"
