--- a/app/src/main/res/layout/item_sentence_card.xml
+++ b/app/src/main/res/layout/item_sentence_card.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:backgroundTint="@color/white"
+        app:cardBackgroundColor="#FFFFFF"
         android:padding="16dp">
 
         <ImageView
