--- a/app/src/main/res/layout/item_starred_sentence.xml
+++ b/app/src/main/res/layout/item_starred_sentence.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="140dp"
         android:orientation="horizontal"
-        android:backgroundTint="@color/white"
+        app:cardBackgroundColor="#FFFFFF"
         android:padding="12dp">
 
         <ImageView
