--- a/app/src/main/res/layout/fragment_join.xml
+++ b/app/src/main/res/layout/fragment_join.xml
@@ -20,6 +20,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="회원가입"
+                android:textColor="#333333"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -29,6 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="닉네임"
+            android:textColor="#333333"
             android:textStyle="bold"
             android:layout_marginTop="20dp"/>
 
@@ -37,6 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:hint="닉네임을 입력해 주세요."
+            android:textColor="#333333"
             android:inputType="text"
             android:background="@android:color/transparent" />
 
@@ -49,6 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="이메일"
+            android:textColor="#333333"
             android:textStyle="bold"
             android:layout_marginTop="20dp"/>
 
@@ -57,6 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:hint="이메일을 입력해 주세요."
+            android:textColor="#333333"
             android:background="@android:color/transparent" />
 
         <View
@@ -69,6 +74,7 @@
             android:layout_height="wrap_content"
             android:text="비밀번호"
             android:textStyle="bold"
+            android:textColor="#333333"
             android:layout_marginTop="20dp"/>
 
         <EditText
@@ -76,6 +82,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:hint="비밀번호를 입력해 주세요."
+            android:textColor="#333333"
             android:inputType="textPassword"
             android:background="@android:color/transparent" />
 
@@ -97,6 +104,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="모두 동의"
+                android:textColor="#333333"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -105,18 +113,21 @@
             android:id="@+id/cbService"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#333333"
             android:text="서비스 약관 동의 (필수)" />
 
         <CheckBox
             android:id="@+id/cbPrivacy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#333333"
             android:text="개인정보 수집 및 이용 동의 (필수)" />
 
         <CheckBox
             android:id="@+id/cbAge"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#333333"
             android:text="만 14세 이상입니다. (필수)" />
 
         <Button
