--- a/app/src/main/res/layout/activity_my_sentences.xml
+++ b/app/src/main/res/layout/activity_my_sentences.xml
@@ -13,12 +13,14 @@
         android:elevation="2dp">
 
         <TextView
+            android:id="@+id/tv_header_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:text="내 문장"
             android:textColor="#333333"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textStyle="bold" />>
 
         <ImageView
             android:id="@+id/iv_menu"
